--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"dependencies": {
+		"diff": "^4.0.1",
 		"documentation": "^11.0.1",
 		"todomvc-app-css": "^2.0.1",
 		"todomvc-common": "^1.0.1"
